--- a/Asset/landing.css
+++ b/Asset/landing.css
@@ -44,6 +44,23 @@ body {
   bottom: -200px;
   left: -200px;
 }
+@media (max-width: 1000px) {
+    .circle {
+        position: absolute;
+        width: 400px;
+        height: 400px;
+        border-radius: 50%;
+        background-color: rgba(202, 212, 177, 1);
+    }
+    .top-right {
+        top: -10px;
+        right: -10px;
+    }
+    .bottom-left {
+        bottom: -10px;
+        left: -10px;
+    }
+}
 
 .judul {
   display: flex;
