--- a/Asset/landing.css
+++ b/Asset/landing.css
@@ -35,15 +35,6 @@ body {
   background-color: rgba(202, 212, 177, 1);
 }
 
-.top-right {
-  top: -200px;
-  right: -200px;
-}
-
-.bottom-left {
-  bottom: -200px;
-  left: -200px;
-}
 @media (max-width: 1000px) {
     .circle {
         position: absolute;
@@ -60,6 +51,16 @@ body {
         bottom: -10px;
         left: -10px;
     }
+}
+
+.top-right {
+  top: -200px;
+  right: -200px;
+}
+
+.bottom-left {
+  bottom: -200px;
+  left: -200px;
 }
 
 .judul {
@@ -92,83 +93,119 @@ body {
   height: 400px;
 }
 
+@media(max-width: 1000px){
+    .gambar-1 img,
+    .gambar-2 img {
+    width: 100%;
+    height: auto;
+}
+
+    .gambar-1,
+    .gambar-2 {
+        width: 200px;
+    }
+}
+
+.login img,
+.login img {
+  width: 300px;
+  height: 300px;
+}
+
+@media(max-width: 1000px){
+    .login img,
+    .login img {
+    width: 100%;
+    height: auto;
+}
+
+    .login,
+    .login {
+        width: 200px;
+    }
+}
+
 .gambar-2 {
-  display: flex;
-  align-items: flex-end;
+    display: flex;
+    align-items: flex-end;
 }
 
 .login-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-family: "Gabriela";
-  width: 550px;
-  height: 400px;
-  background-color: rgba(223, 232, 201, 1);
-  border-radius: 20px;
-  margin-top: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-family: "Gabriela";
+    width: 550px;
+    height: 400px;
+    background-color: rgba(223, 232, 201, 1);
+    border-radius: 20px;
+    margin-top: 30px;
 }
 
 .login-container h2 {
-  text-align: center;
-  font-size: 45px;
-  margin: 0;
+    text-align: center;
+    font-size: 45px;
+    margin: 0;
 }
 
+
 .login-container form {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-top: 20px;
 }
 
 .login-container input[type="text"],
 .login-container input[type="password"] {
-  display: flex;
-  width: 400px;
-  height: 40px;
-  margin-bottom: 30px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  font-size: 20px;
-  padding-left: 20px;
+    display: flex;
+    width: 400px;
+    height: 40px;
+    margin-bottom: 30px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 20px;
+    padding-left: 20px;
 }
+
+
 
 .login-container input[type="text"]::placeholder,
 .login-container input[type="password"]::placeholder {
-  font-family: "Gabriela";
-  font-size: 20px;
+    font-family: "Gabriela";
+    font-size: 20px;
 }
 .remember-me {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-bottom: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 10px;
 }
 
 .remember-me input[type="checkbox"] {
-  margin-right: 20px;
-  width: 25px;
-  height: 25px;
-  cursor: pointer;
+    margin-right: 20px;
+    width: 25px;
+    height: 25px;
+    cursor: pointer;
 }
 
 .remember-me label {
-  font-size: 25px;
+    font-size: 25px;
 }
 .login-container button {
-  width: 200px;
-  height: 40px;
-  font-family: "Gabriela";
-  font-size: 25px;
-  background-color: rgba(101, 114, 68, 1);
-  color: #fff;
-  border: none;
-  border-radius: 30px;
-  cursor: pointer;
-  margin-bottom: 20px;
+    border: 1px solid red;
+    width: 200px;
+    height: 40px;
+    font-family: "Gabriela";
+    font-size: 25px;
+    background-color: rgba(101, 114, 68, 1);
+    color: #fff;
+    border: none;
+    border-radius: 30px;
+    cursor: pointer;
+    margin-bottom: 20px;
 }
 
 .login-link {
@@ -177,9 +214,59 @@ body {
   font-size: 15px;
   margin-bottom: 30px;
 }
+@media (max-width: 1000px){
+    .login-container {
+        width: 400px;
+    }
 
-.login img,
-.login img {
-  width: 300px;
-  height: 300px;
+    .login-container h2 {
+        font-size: 28px;
+    }
+
+    .login-container input[type="text"],
+    .login-container input[type="password"] {
+        width: 300px;
+    }
+
+    .login-container button, .remember-me label {
+        font-size: 20px;
+    }
+}
+
+@media (max-width: 740px){
+    .gambar-1 img,
+    .gambar-2 img,
+    .login img {
+        display: none;
+    }
+
+    .circle {
+        position: absolute;
+        width: 350px;
+        height: 350px;
+        border-radius: 50%;
+        background-color: rgba(202, 212, 177, 1);
+    }
+    .login-container {
+        width: 300px;
+    }
+
+    .login-container h2 {
+        font-size: 24px;
+    }
+
+    .login-container input[type="text"],
+    .login-container input[type="password"] {
+        width: 250px;
+    }
+
+    .login-container button, .remember-me label {
+        font-size: 20px;
+    }
+}
+
+@media (max-width: 430px){
+    .circle {
+        display: none;
+    }
 }
