--- a/Asset/home.css
+++ b/Asset/home.css
@@ -135,6 +135,9 @@ body {
   border-radius: 20px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   overflow: hidden;
+  text-align: left; /* Center-align the text */
+  text-decoration: none;
+  color: black;
 }
 
 .reminder-history-container {
